--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,4 @@ endif()
 add_subdirectory(${ARCH_PATH})
 add_subdirectory(board/${BOARD_FAMILY})
 add_subdirectory(kernel)
-add_subdirectory(demo/proc_delay)
+add_subdirectory(demo/sched_lock)
